--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,36 @@
 node_modules/
 frontend/node_modules/
 backend/node_modules/
+
+# Environment variables - VERY IMPORTANT
+.env
+.env.local
+.env.*.local
 *.env
 key.env
+
+# Expo
+.expo/
+dist/
+web-build/
+
+# Native
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+
+# Dependencies
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# macOS
+.DS_Store
+
+# iOS
+*.xcworkspace
+*.xcuserdata
+*.xccheckout
